k8s/05-agentgateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentgateway-proxy
  namespace: agentgateway-system
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 3000
      name: mcp-secure-listener
      allowedRoutes:
        namespaces:
          from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-route
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
    - filters:
        - type: CORS
          cors:
            allowCredentials: false
            allowHeaders: ["*"]
            allowMethods: ["*"]
            allowOrigins: ["*"]
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: mcp-backend
      matches:
        - path:
            type: PathPrefix
            value: /mcp
